# seemsgood_guild

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  get-events.sh  json_helpers.sh  outfile  wrangler.toml
.github/workflows/: ci.yml  rust-clippy.yml
helpers/: handle_r2_upload.sh  helpers_main.sh  json_helpers.sh  wcl-progress.sh
helpers/service/: bootstrap.sh  update_raid-daily.timer  update_raid-raidnight.timer  update_raid.service
src/: about_data.rs  dps_sims.rs  lib.rs  main.rs  mythic_plus.rs  player_metadata.rs
templates/: about.html  ads.txt  apply.html  arewelogging.html  dps-sims.bak  dps-sims.html  form.html  index.html  layout.html  mythic-plus.html  resources.html  script.js  wowaudit.html
templates/assets/: contact-card.html  events.json  progress.json  roster-players.html  s1-card.html  s2-card.html  s4-df-card.html  scrolling-events.html  season-card.html  wcl-progress-card.html
templates/css/: carousel.css
templates/roster/: amarelys.html  chinterfel.html  chuubers.html  dubshamm.html  filio.html  infilicious.html  jakksparrow.html  kaelirious.html  lunacrypt.html  notshodo.html  nuzzsin.html  nyxiam.html  rogergrowth.html  sabrocom.html  tusknight.html  yurím.html
templates_backup/: apply.html
wiki/: site.wiki
