[package]
name = "dev-seemsgood-guild"
version = "0.1.0"
edition = "2021"
authors = [ "jg <j51b5@pm.me>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.2.0", features=['http', 'axum'] }
worker-macros = { version="0.2.0", features=['http'] }
axum  = { version = "0.7", default-features = false }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
include_dir = "0.7.4"
askama_axum = "0.4.0"
askama = "0.12.1"
